--- a/processing_music.ipynb
+++ b/processing_music.ipynb
@@ -320,8 +320,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2d303bc3-1bd3-4c5d-9f21-cce4c1155038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fluidsynth: warning: No preset found on channel 9 [bank=128 prog=0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FluidSynth runtime version 2.2.5\n",
+      "Copyright (C) 2000-2022 Peter Hanappe and others.\n",
+      "Distributed under the LGPL license.\n",
+      "SoundFont(R) is a registered trademark of Creative Technology Ltd.\n",
+      "\n",
+      "Rendering audio to file 'output.wav'..\n",
+      "Command executed successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "# Command to run\n",
+    "command = [\n",
+    "    \"fluidsynth\",\n",
+    "    \"-ni\",\n",
+    "    \"./soundfont/Dore Mark's NY S&S Model B-v5.2.sf2\",\n",
+    "    \"heart.mid\",\n",
+    "    \"-F\",\n",
+    "    \"output.wav\",\n",
+    "    \"-r\",\n",
+    "    \"44100\"\n",
+    "]\n",
+    "\n",
+    "# Run the command\n",
+    "try:\n",
+    "    subprocess.run(command, check=True)\n",
+    "    print(\"Command executed successfully.\")\n",
+    "except subprocess.CalledProcessError as e:\n",
+    "    print(\"Error:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a8c4d20-d268-4a01-b6c2-d64ef3ec20a0",
    "metadata": {},
    "outputs": [],
    "source": []
